# RSE_lirs

./: .gitignore  001.sql  CMakeLists.txt  cstyle.cpp  main.cpp
config/: in_VID5.xml
src/: camera_calibration.cpp  cstyle.cpp  edges.cpp  grid.cpp  main.cpp
src/calibration/l_r/: l.yaml  r.yaml  right_camera.yaml
src/calibration/stereo/: calib_from_yaml.cpp  left.yaml  right.yaml
src/pcl/: pcl.cpp
